--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
-    "dva": "^2.6.0-beta.21",
+    "@hocgin/gin-footer": "latest",
+    "@ant-design/icons": "^4.5.0",
     "antd": "^4.8.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "prop-types": "^15.7.2",
-    "moment": "latest",
+    "classnames": "latest",
+    "dva": "^2.6.0-beta.21",
     "hash.js": "latest",
+    "moment": "latest",
+    "prop-types": "^15.7.2",
     "query-string": "latest",
-    "classnames": "latest"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "@umijs/preset-react": "^1.6.19",
     "babel-eslint": "^9.0.0",
     "eslint": "^5.4.0",
     "eslint-config-umi": "^1.4.0",
@@ -32,8 +35,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
     "react-test-renderer": "^16.7.0",
-    "umi": "^3.2.27",
-    "@umijs/preset-react": "^1.6.19"
+    "umi": "^3.2.27"
   },
   "lint-staged": {
     "*.{js,jsx}": [
