--- a/.github/workflows/deploy_ssr.yaml
+++ b/.github/workflows/deploy_ssr.yaml
@@ -91,22 +91,15 @@ jobs:
           echo ::set-output name=tags::${BRANCH_NAME}
 
       # 设置 JDK 环境
-      - name: Set up JDK 12.0
-        uses: actions/setup-java@v1
+      - name: Install Node.js
+        uses: actions/setup-node@v1
         with:
-          java-version: 12.0
-      # 缓存 Maven 仓库
-      - name: Cache local Maven repository
-        if: ${{ github.event.inputs.use_cache != 'false' }}
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      # 进行 Maven 编译
-      - name: Build with Maven
-        run: ./mvnw clean package -DskipTests --batch-mode
+          node-version: '10.x'
+      # 编译
+      - name: Install npm dependencies
+        run: npm install
+      - name: Run build
+        run: npm run build
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       # 设置 Docker 编译环境
