--- a/package.json
+++ b/package.json
@@ -1,35 +1,51 @@
 {
+  "name": "rabbit-www",
   "private": true,
   "scripts": {
-    "start": "max dev",
-    "build": "UMI_ENV=prod max build",
-    "build:prod.cdn": "UMI_ENV=prod.cdn max build",
-    "build:local": "UMI_ENV=local max build",
-    "build:dev": "UMI_ENV=dev max build",
-    "build:test": "UMI_ENV=test max build",
-    "test": "UMI_ENV=test max test",
-    "precommit": "lint-staged"
+    "start": "umi dev",
+    "analyze": "cross-env ANALYZE=1 umi dev",
+    "start:nomock": "cross-env MOCK=none umi dev",
+    "start:prod.addone": "cross-env UMI_ENV=prod.addone umi dev",
+    "build": "cross-env UMI_ENV=prod umi build",
+    "build:local": "cross-env UMI_ENV=local umi build",
+    "build:dev": "cross-env UMI_ENV=dev umi build",
+    "build:test": "cross-env UMI_ENV=test umi build",
+    "build:local.ssr": "cross-env UMI_ENV=local.ssr umi build",
+    "build:prod.ssr": "cross-env UMI_ENV=prod.ssr umi build",
+    "build:prod.cdn": "cross-env UMI_ENV=prod.cdn umi build",
+    "build:prod.addone": "cross-env UMI_ENV=prod.addone umi build",
+    "postinstall": "umi generate tmp",
+    "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
+    "test": "umi-test",
+    "test:coverage": "umi-test --coverage"
   },
   "dependencies": {
-    "@ant-design/compatible": "^0.0.1-rc.1",
-    "@ant-design/icons": "^4.5.0",
+    "@hocgin/browser-addone-kit": "^2.0.16",
+    "@hocgin/mock-kit": "^2.0.16",
     "@hocgin/hkit": "^2.0.16",
-    "@hocgin/ui": "^5.0.7",
-    "antd": "5.0.3",
+    "@hocgin/ui": "^5.0.9",
+    "antd": "5.0.7",
     "classnames": "^2.3.1",
-    "hash.js": "latest",
-    "query-string": "^7.0.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "cross-env": "^7.0.3",
-    "typescript": "^4.1.2",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.2.2",
-    "@umijs/max": "^4.0.0",
+    "mockjs": "^1.1.0",
+    "query-string": "^7.0.1",
     "react": "18.x",
     "react-dom": "18.x"
+  },
+  "devDependencies": {
+    "@hocgin/umijs-plugin-browser-addone": "^1.0.93",
+    "@types/mockjs": "^1.0.6",
+    "@types/react": "^18.x",
+    "@types/react-dom": "^18.x",
+    "@umijs/plugin-qiankun": "^2.37.2",
+    "@umijs/preset-react": "^1.8.30",
+    "@umijs/test": "^3.5.20",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "cross-env": "^7.0.3",
+    "lint-staged": "^10.0.7",
+    "prettier": "^2.2.0",
+    "typescript": "^4.1.2",
+    "yorkie": "^2.0.0",
+    "umi": "^3.5.20"
   },
   "engines": {
     "node": ">=12.0.0"
