--- a/.github/workflows/deploy.test.yml
+++ b/.github/workflows/deploy.test.yml
@@ -21,4 +21,5 @@ jobs:
         id: props
         uses: hocgin/action-json-file-to-env@main
         with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           debug: true
