--- a/.github/workflows/deploy.test.yml
+++ b/.github/workflows/deploy.test.yml
@@ -22,4 +22,5 @@ jobs:
         uses: hocgin/action-json-file-to-env@main
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           debug: true
